@@ -156,61 +156,63 @@ add_object(gint staff, gint type, accidentals_e accidentals, object_e nature, gu
         staff_data->Object_list =
                 g_list_append(staff_data->Object_list, staff_data->Object);
 
-        staff_set_current_x(staff, staff_get_current_x(staff) + object_get_spacing(type));
+        if (group_id == 0) {
+                staff_set_current_x(staff, staff_get_current_x(staff) + object_get_spacing(type));
 
-        switch (type) {
-        case DOUBLEWHOLE:
-                Score.staff_extremity_end_x += Spacings.NotesRests.sa_doublewhole;
-                break;
-        case DOUBLEWHOLEREST:
-                Score.staff_extremity_end_x += Spacings.NotesRests.sa_doublewholerest;
-                break;
-        case WHOLE:
-                Score.staff_extremity_end_x += Spacings.NotesRests.sa_whole;
-                break;
-        case WHOLEREST:
-                Score.staff_extremity_end_x += Spacings.NotesRests.sa_wholerest;
-                break;
-        case HALF:
-                Score.staff_extremity_end_x += Spacings.NotesRests.sa_half;
-                break;
-        case HALFREST:
-                Score.staff_extremity_end_x += Spacings.NotesRests.sa_halfrest;
-                break;
-        case QUARTER:
-                Score.staff_extremity_end_x += Spacings.NotesRests.sa_quarter;
-                break;
-        case QUARTERREST:
-                Score.staff_extremity_end_x += Spacings.NotesRests.sa_quarterrest;
-                break;
-        case EIGHTH:
-                Score.staff_extremity_end_x += Spacings.NotesRests.sa_eighth;
-                break;
-        case EIGHTHREST:
-                Score.staff_extremity_end_x += Spacings.NotesRests.sa_eighthrest;
-                break;
-        case SIXTEENTH:
-                Score.staff_extremity_end_x += Spacings.NotesRests.sa_sixteenth;
-                break;
-        case SIXTEENTHREST:
-                Score.staff_extremity_end_x += Spacings.NotesRests.sa_sixteenthrest;
-                break;
-        case BARLINE_SINGLE:
-        case BARLINE_DOUBLE:
-        case BARLINE_OPENREPEAT:
-        case BARLINE_CLOSEREPEAT:
-        case BARLINE_OPENCLOSEREPEAT:
-                Score.staff_extremity_end_x += Spacings.Barlines.sab;
-                break;
-        case TREBLE_KEY:
-        case BASS_KEY:
-        case ALTO_KEY:
-        case TENOR_KEY:
-                Score.staff_extremity_end_x += STANDARD_KEY_SIZE;
-                break;
-        default:
-                printf("(add_objects) Unknown object %d\n", type);
-                break;
+                switch (type) {
+                case DOUBLEWHOLE:
+                        Score.staff_extremity_end_x += Spacings.NotesRests.sa_doublewhole;
+                        break;
+                case DOUBLEWHOLEREST:
+                        Score.staff_extremity_end_x += Spacings.NotesRests.sa_doublewholerest;
+                        break;
+                case WHOLE:
+                        Score.staff_extremity_end_x += Spacings.NotesRests.sa_whole;
+                        break;
+                case WHOLEREST:
+                        Score.staff_extremity_end_x += Spacings.NotesRests.sa_wholerest;
+                        break;
+                case HALF:
+                        Score.staff_extremity_end_x += Spacings.NotesRests.sa_half;
+                        break;
+                case HALFREST:
+                        Score.staff_extremity_end_x += Spacings.NotesRests.sa_halfrest;
+                        break;
+                case QUARTER:
+                        Score.staff_extremity_end_x += Spacings.NotesRests.sa_quarter;
+                        break;
+                case QUARTERREST:
+                        Score.staff_extremity_end_x += Spacings.NotesRests.sa_quarterrest;
+                        break;
+                case EIGHTH:
+                        Score.staff_extremity_end_x += Spacings.NotesRests.sa_eighth;
+                        break;
+                case EIGHTHREST:
+                        Score.staff_extremity_end_x += Spacings.NotesRests.sa_eighthrest;
+                        break;
+                case SIXTEENTH:
+                        Score.staff_extremity_end_x += Spacings.NotesRests.sa_sixteenth;
+                        break;
+                case SIXTEENTHREST:
+                        Score.staff_extremity_end_x += Spacings.NotesRests.sa_sixteenthrest;
+                        break;
+                case BARLINE_SINGLE:
+                case BARLINE_DOUBLE:
+                case BARLINE_OPENREPEAT:
+                case BARLINE_CLOSEREPEAT:
+                case BARLINE_OPENCLOSEREPEAT:
+                        Score.staff_extremity_end_x += Spacings.Barlines.sab;
+                        break;
+                case TREBLE_KEY:
+                case BASS_KEY:
+                case ALTO_KEY:
+                case TENOR_KEY:
+                        Score.staff_extremity_end_x += STANDARD_KEY_SIZE;
+                        break;
+                default:
+                        printf("(add_objects) Unknown object %d\n", type);
+                        break;
+                }
         }
 
         return TRUE;
